--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "source": "src/index.html",
   "browserslist": "Last 2 Chrome versions",
   "devDependencies": {
+    "@parcel/transformer-sass": "^2.3.1",
     "parcel": "^2.2.1"
   }
 }
