--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "js-weather-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "parcel --open --port 1234",
     "build:parcel": "parcel build ./src/index.html --public-url ./",
-    "clean": "rm -rf dist/* && rm-rf .parcel-cache/*",
+    "clean": "rm -rf dist/* && rm -rf .parcel-cache/*",
     "build": "npm run clean && npm run build:parcel",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "source": "src/index.html",
-  "browserslist": "Last 2 Chrome versions",
+  "browserslist": "defaults",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.1",
+    "gh-pages": "^3.2.3",
     "parcel": "^2.2.1"
+  },
+  "dependencies": {
+    "@swc/helpers": "^0.3.6",
+    "regenerator-runtime": "^0.13.9"
   }
 }
